@@ -3,3 +3,6 @@
 
 Тема: Музичний Програвач
 ## Інструкція по запуску
+1) Скачуєте MusicPlayer.zip з Releases та розархівовуєте.
+2) Запускаєте термінал (консоль) у папці, де вміст архіву. В терміналі вводите команду `java -jar MusicServer.jar` (або `java -cp MusicServer.jar com.example.kursova.server.ServerApp`). Термінал не закривати при цьому.
+3) Запускаєте термінал (консоль) у папці, де вміст архіву. В терміналі вводите команду `java -jar MusicClient.jar` (або `java --module-path "javafx-sdk-21.0.9\lib" --add-modules javafx.controls,javafx.fxml,javafx.media -jar MusicClient.jar`). 
